// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chevron  should render correctly by defoult 1`] = `
<svg
  class="h-6 w-6 stroke-white sm:h-8 sm:w-8"
  data-testid="chevron-test-id"
  fill="none"
  viewBox="0 0 32 32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 12L16 20L24 12"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Chevron renders correctly with className prop 1`] = `
<svg
  class="h-6 w-6 sm:h-8 sm:w-8 stroke-main"
  data-testid="chevron-test-id"
  fill="none"
  viewBox="0 0 32 32"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 12L16 20L24 12"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
</svg>
`;
